<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.unamjorge.practicas.atividadesarrollodeunaactividad.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
<LinearLayout
    android:layout_marginLeft="@dimen/left"
    android:layout_marginTop="@dimen/top"
    android:layout_marginRight="@dimen/right"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreCompleto"
            android:textColor="@color/pimarytext" />

    </android.support.design.widget.TextInputLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lefttexto1"
            android:text="@string/textoFechaS"

            android:textColor="@color/pimarytext" />

        <TextView

            android:id="@+id/Tvfechanacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lefttexto"
            android:text="@string/textoFechaEncabesado"

            android:textColor="@color/pimarytext" />
    </LinearLayout>


    <DatePicker
        android:id="@+id/pdDatosFecha"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height"
        android:layout_gravity="center_horizontal"
        android:calendarTextColor="@color/colorAccent"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"


        android:scaleX="1"
        android:scaleY=".8" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button

            android:id="@+id/btnCancelar"
            android:layout_width="@dimen/width"
            android:layout_height="wrap_content"
            android:text="@string/botonCancelar"
            android:onClick="btnCancelarfecha"
            android:theme="@style/MibotonRaised" />

        <Button
            android:id="@+id/btnVerificarfecha"
            android:layout_width="@dimen/width"
            android:layout_height="wrap_content"
            android:text="@string/botonConfimarFecha"
            android:onClick="bntConfimarfecha"
            android:theme="@style/MibotonRaised" />
    </LinearLayout>

</LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/txtTelefono"
            android:maxLength="11"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:textColor="@color/pimarytext"
            android:hint="@string/telefono"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/txtEmail"
            android:layout_height="wrap_content"
            android:textColor="@color/pimarytext"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingBottom="@dimen/left"
        android:text="@string/descripcion"
        android:textSize="@dimen/texzise" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/txtdescripcion"
            android:layout_height="wrap_content"
            android:textColor="@color/pimarytext"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonSiguinete"
        android:theme="@style/MibotonRaised"
        android:onClick="B1clik1"/>
</LinearLayout>
</ScrollView>

</RelativeLayout>
